[package]
name = "acfunliveapi"
version = "0.1.0"
authors = ["orzogc"]
edition = "2018"
description = "API for AcFun live's REST interface"
license = "MIT"
repository = "https://github.com/orzogc/acfunliveapi"
readme = "README.md"
categories = ["api-bindings", "web-programming"]
keywords = ["acfun", "live"]

[features]
default = ["default_http_client"]
default_http_client = ["reqwest"]

[dependencies]
async-trait = "0.1.50"
cookie = "0.15.1"
pretend = "0.2.1"
reqwest = { version = "0.11.4", default-features = false, features = ["rustls-tls", "gzip"], optional = true }
serde = { version = "1.0.126", features = ["derive"] }
serde_json = "1.0.64"
thiserror = "1.0.26"

[dev-dependencies]
tokio = { version = "1.8.1", features = ["rt-multi-thread", "macros"] }
