[package]
name = "acfunlivedanmaku"
version = "0.1.0"
authors = ["orzogc"]
edition = "2018"
description = "API for AcFun live's danmaku interface"
license = "MIT"
repository = "https://github.com/orzogc/acfunliveapi"
readme = "README.md"
categories = ["api-bindings", "web-programming"]
keywords = ["acfun", "live", "danmaku"]
build = "build.rs"

[features]
default = ["api", "default_ws_client", "_serde"]
api = ["acfunliveapi"]
default_ws_client = ["tokio", "tokio-tungstenite"]
_serde = ["serde", "serde_bytes", "serde_json"]

[dependencies]
acfunliveapi = { version = "0.1.0", path = "../api", optional = true }
aes = "0.7.4"
async-compression = { version = "0.3.8", features = ["futures-io", "gzip"] }
async-timer = "0.7.4"
async-trait = "0.1.50"
base64 = "0.13.0"
block-modes = "0.8.1"
futures = "0.3.15"
prost = "0.7.0"
rand = "0.8.4"
serde = { version = "1.0.126", features = ["derive"], optional = true }
serde_bytes = { version = "0.11.5", optional = true }
serde_json = { version = "1.0.64", optional = true }
thiserror = "1.0.26"
tokio = { version = "1.8.0", features = ["macros", "net", "time"], optional = true }
tokio-tungstenite = { version = "0.14.0", features = ["rustls-tls"], optional = true }

[build-dependencies]
prost-build = "0.7.0"
tokio = { version = "1.8.0", features = ["rt-multi-thread", "macros", "time"] }
