[package]
name = "acfunlivedanmaku"
version = "0.1.0"
authors = ["orzogc"]
edition = "2018"
description = "API for AcFun live's danmaku interface"
license = "MIT"
repository = "https://github.com/orzogc/acfunliveapi"
readme = "README.md"
categories = ["api-bindings", "web-programming"]
keywords = ["acfun", "live", "danmaku"]
build = "build.rs"

[features]
default = ["api", "default_ws_client", "_serde"]
api = ["acfunliveapi"]
default_ws_client = ["async-tungstenite", "tokio", "ws_stream_tungstenite"]
_serde = ["serde", "serde_bytes", "serde_json"]

[dependencies]
acfunliveapi = { version = "0.1.0", path = "../api", optional = true }
aes = "0.7.4"
async-trait = "0.1.51"
async-tungstenite = { version = "0.13.1", features = ["tokio-rustls"], optional = true }
asynchronous-codec = "0.6.0"
base64 = "0.13.0"
block-modes = "0.8.1"
derive_more = { version = "0.99.16", default-features = false, features = ["from"] }
flate2 = "1.0.20"
futures = "0.3.16"
log = "0.4.14"
prost = "0.8.0"
rand = "0.8.4"
serde = { version = "1.0.127", features = ["derive"], optional = true }
serde_bytes = { version = "0.11.5", optional = true }
serde_json = { version = "1.0.66", optional = true }
thiserror = "1.0.26"
tokio = { version = "1.9.0", features = ["time"], optional = true }
ws_stream_tungstenite = { version = "0.6.1", optional = true }

[build-dependencies]
prost-build = "0.8.0"

[dev-dependencies]
env_logger = "0.9.0"
tokio = { version = "1.9.0", features = ["rt-multi-thread", "macros"] }
